# firebasil

./: .gitignore  .readthedocs.yaml  README.md  database.rules.json  firebase.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
docs/api/: auth.rst  rtdb.rst
src/firebased/: exceptions.py  rtdb.py
src/firebasil/: exceptions.py  rtdb.py  types.py  warnings.py
src/firebasil/auth/: __init__.py  auth.py  constants.py  types.py
src/firebasil/sse/: SseClient.py  sse_client.py
tests/: helpers.py
tests/integration/: conftest.py  constants.py  helpers.py  test_auth.py  test_rtdb.py
tests/unit/: test_auth.py  test_rtdb.py
