[tool.poetry]
name = "firebasil"
version = "0.1.5"
description = "A modern async Firebase library"
authors = ["Kevin Duff <kevinkelduff@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/k2bd/firebasil"
repository = "https://github.com/k2bd/firebasil"
documentation = "https://firebasil.readthedocs.io/"
keywords = []
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
typing-extensions = "^4.1.1"
stringcase = "^1.2.0"
aiohttp-sse-client = "^0.2.1"
dateparser = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^3.9.2"
mypy = "^0.931"
pytest-cov = "^3.0.0"
poethepoet = "^0.11.0"
pytest-asyncio = "^0.18.1"
firebase-admin = "^5.2.0"
pytest-random-order = "^1.0.4"
types-dateparser = "^1.1.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poe.tasks]
docs = "make clean html -C docs"

autoformat.sequence = [
    {cmd = "black src tests"},
    {cmd = "isort src tests"},
]

lint.sequence = [
    {cmd = "black --check -v src tests"},
    {cmd = "isort --check -v src tests"},
    {cmd = "flake8 src tests"},
    {cmd = "mypy --pretty src tests"},
]

test.sequence = ["unit", "integration"]

[tool.poe.tasks.unit]
sequence = [
    {cmd = "pytest -vv --random-order --cov-report xml --cov-report term --cov=firebasil tests/unit"},
]

[tool.poe.tasks.integration]
sequence = [
    {shell = 'firebase emulators:exec --project demo-firebasil-test "pytest -vv --random-order --cov-append --cov-report xml --cov-report term --cov=firebasil -s tests/integration"'},
]

[tool.poe.tasks.integration.env]
FIREBASE_AUTH_EMULATOR_HOST = "http://127.0.0.1:9099"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]
